<resources>
    <string name="app_name">Ruta de las Estelas</string>
    <string name="new_game_button">Nuevo juego</string>
    <string name="new_game_string">Nuevo juego</string>
    <string name="continue_button">Continuar</string>
    <string name="what_name">¿Cuál es tu nombre?</string>
    <string name="name">Nombre</string>
    <string name="send">Enviar</string>
    <string name="incorrect">Incorrecto</string>
    <string name="try_again">Inténtalo otra vez</string>
    <string name="select_one">Selecciona alguna de las opciones</string>
    <string name="correct">Correcto</string>
    <string name="points_obtained">Has obtenido %1$.2f puntos</string>
    <string name="did_you_know">¿Sabías que...</string>
    <string name="choose_stela">Escoge una estela</string>
    <string name="choose_character">Escoge tu personaje</string>
    <string name="start_time">00:00</string>
    <string name="letters_remaining">¿Qué letras faltan en el siguiente texto de la estela?</string>
    <string name="left_arrow">◄</string>
    <string name="right_arrow">►</string>
    <string name="complete_gaps">Completa todos los huecos</string>
    <string name="settings_button">Ajustes</string>
    <string name="game_not_exists">No hay ningún juego iniciado.</string>
    <string name="ask_new_game">Borrar partida guardada y empezar un nuevo juego</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="hint">Pista</string>
    <string name="hint_explain">Si pulsas aquí recibirás una pista, pero esto podría afectar a tu puntuación</string>
    <string name="ok">Aceptar</string>
    <string name="end_game">Fin del juego</string>
    <string name="information">Información</string>
    <string name="environment_text">Aquí puedes ver el entorno en el que se encuentra la estela que tienes cerca</string>
    <string name="back_main_menu">Volver al menú principal</string>
    <string name="select_character">Selecciona un personaje</string>
    <string name="end_game_confirmation">Si finalizas la partida no podrás retomarla</string>
    <string name="shared_text">Llevo una puntuación de %1$s puntos en el juego de Ruta de las Estelas</string>
    <string name="stela_video">Vídeo estelas</string>
    <string name="did_you_know_info_text">Si pulsas sobre la interrogación en la barra de herramientas podrás ver un vídeo de la estela en 3D</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_title_communication">Comunicación</string>
    <string name="menu_home">Inicio</string>
    <!--    <string name="menu_gallery">Gallery</string>-->
    <!--    <string name="menu_slideshow">Slideshow</string>-->
    <string name="menu_ranking">Ranking</string>
    <string name="menu_end_game">Finalizar partida</string>
    <!--    <string name="menu_tools">Tools</string>-->
    <string name="menu_settings">Ajustes</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_send">Enviar</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="map">Mapa</string>
    <string name="general">General</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="map_type_title">Tipo de mapa</string>
    <string name="difficulty">Dificultad</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
