<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/general">

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:defaultValue="easy"
            app:entries="@array/difficulty_entries"
            app:entryValues="@array/difficulty_values"
            app:key="difficulty"
            app:title="@string/difficulty"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/map">

        <ListPreference
            app:defaultValue="MAP_TYPE_SATELLITE"
            app:entries="@array/map_entries"
            app:entryValues="@array/map_values"
            app:key="map_type"
            app:title="@string/map_type_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
