<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TypeCompleteWordsActivity">

    <Button
        android:id="@+id/send_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="sendPhrase"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@color/colorButton"
        android:text="@string/letters_remaining"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridView
        android:id="@+id/letters_selection"
        android:layout_width="410dp"
        android:layout_height="116dp"
        android:layout_marginBottom="16dp"
        android:columnWidth="100dp"
        android:gravity="center"
        android:horizontalSpacing="5dp"
        android:numColumns="4"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp"
        app:layout_constraintBottom_toTopOf="@+id/send_phrase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/text_to_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:ems="10"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/left_arrow"
        android:layout_width="59dp"
        android:layout_height="53dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="16dp"
        android:text="@string/left_arrow"
        android:onClick="leftArrowPressed"
        app:layout_constraintBottom_toTopOf="@+id/letters_selection"
        app:layout_constraintEnd_toStartOf="@+id/right_arrow"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/right_arrow"
        android:layout_width="59dp"
        android:layout_height="53dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="16dp"
        android:text="@string/right_arrow"
        android:onClick="rightArrowPressed"
        app:layout_constraintBottom_toTopOf="@+id/letters_selection"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>